/**
 * Клас конфігурації гри.
 * Містить карти рівнів, налаштування швидкості, кольори та константи елементів карти.
 */
class Config {
  /**
   * Карти рівнів для різних складностей.
   * @type {Object.<string, string[]>}
   */
  static MAPS = {
    easy: [
      "11111111111111111111",
      "10000000000000000001",
      "10111101111101111101",
      "10200001000001000001",
      "10101101011101011101",
      "10001000000001000001",
      "11101011111101011111",
      "10000010000000000001",
      "10111110111111111001",
      "10000000000000000001",
      "10111111111111111001",
      "10000000000000000001",
      "10111111111111111001",
      "10000000000000000001",
      "10101110111101011101",
      "10100000100001000001",
      "10111111101101111101",
      "20000000001100000002",
      "11111111111111111111"
    ],
    normal: [
      "11111111111111111111",
      "20000000001100000002",
      "10111111101101111101",
      "10100000100001000001",
      "10101110111101011101",
      "10001000000001000001",
      "11101011111101011111",
      "00000010000000000000",
      "10111110111111111001",
      "10000000000000000001",
      "10111111111111111001",
      "00000000000000000000",
      "11101111111111101111",
      "10001000000001000001",
      "10101110111101011101",
      "10100000100001000001",
      "10111111101101111101",
      "20000000001100000002",
      "11111111111111111111"
    ],
    hard: [
      "11111111111111111111",
      "12000110000001100021",
      "10111110111111101101",
      "10100000100001000001",
      "10101110111101011101",
      "10100000000001000001",
      "10101111101111011101",
      "10000010000000000001",
      "10111110111111111001",
      "10000000000000000001",
      "10111111111111111001",
      "10000001000001000001",
      "10101111101111011101",
      "10100000100001000001",
      "10111110111101111101",
      "10000000000001000001",
      "10111111101101111101",
      "10000000001100000001",
      "11111111111111111111"
    ]
  };

  /**
   * Налаштування рівнів: швидкість привидів, їх кольори та текстові назви.
   * @type {Object.<string, {ghostSpeed: number, ghosts: string[], label: string}>}
   */
  static LEVEL_CONFIGS = {
    easy: { ghostSpeed: 3.2, ghosts: ['red', 'pink'], label: 'Легкий' },
    normal: { ghostSpeed: 4.2, ghosts: ['red', 'pink', 'cyan', 'orange'], label: 'Середній' },
    hard: { ghostSpeed: 5.2, ghosts: ['red', 'pink', 'cyan', 'orange', 'blue'], label: 'Важкий' }
  };

  /** Символ стіни на карті */
  static CELL_WALL = '1';
  /** Символ звичайної крапки на карті */
  static CELL_DOT = '0';
  /** Символ бонуса на карті */
  static CELL_BONUS = '2';
  /** Символ порожньої клітинки на карті */
  static CELL_EMPTY = ' ';

  /** Базова швидкість Pac-Man */
  static PAC_BASE_SPEED = 6;

  /**
   * Початкові позиції привидів на карті.
   * @type {Array.<{x: number, y: number}>}
   */
  static GHOST_POSITIONS = [
    { x: 18, y: 1 },
    { x: 18, y: 17 },
    { x: 1, y: 17 },
    { x: 10, y: 9 },
    { x: 1, y: 1 }
  ];
}
